--- a/src/index.css
+++ b/src/index.css
@@ -33,17 +33,17 @@ body {
 /* header */
 header {
   width: 100%;
-  height: 40px;
+  height: 48px;
   color: #fff;
   background: linear-gradient(315deg, #a151ed, #6586fc);
-  padding: 16px 16px 0 16px;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  align-items: stretch;
+  align-items: center;
   align-content: center;
   z-index: 1000;
   font-size: 20px;
+  padding-left: 16px;
 }
 
 
@@ -132,6 +132,7 @@ nav {
 .vertical {
   display: flex;
   flex-direction: column;
+  padding-top: 4px;
 }
 
 .horizontal {
@@ -157,6 +158,18 @@ nav {
   height: 20vh;
   
 }
+
+.row {
+  background: #fff;
+  display: flex;
+  align-content: space-around;
+  text-decoration: none;
+  text-decoration-color: none;
+  color: inherit; 
+  height: 20vh;
+  border-bottom: 1px solid #ccc;
+}
+
 
 
 
@@ -184,7 +197,6 @@ nav {
 
 
 .image-placeholder {
-  margin: 0.5rem;
   flex: 2;
 }
 .content-placeholder {
