added hover effect to category list

--- a/src/index.css
+++ b/src/index.css
@@ -476,3 +476,9 @@ nav {
   color: #6586fc;
   font-size: x-small;
  }
+
+ .category-group  a:hover  {
+  transform: scale(1.05);
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+}
+
