--- a/src/index.css
+++ b/src/index.css
@@ -473,8 +473,8 @@ nav {
   display: flex;
   justify-content: center;
   align-items: center;
-  color: #6586fc;
-  font-size: x-small;
+  color: red;
+  padding: 10px;
  }
 
 
